# app/Http/Requests/Chat/StoreChatRequest.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Http\Requests\Chat;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreChatRequest extends FormRequest
+{
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'message' => 'required|string|max:255',
+            'reciever_id' => 'required|string|max:255|exists:users,id',
+        ];
+    }
+}
